--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask
 Gunicorn
-Requests
-pyfiglet
-finnhub-python
-flask_socketio
-apscheduler.schedulers.background
+APScheduler==3.7.0
+Flask==2.0.2
+Flask-SocketIO==5.4.0
+finnhub-python==2.4.0
+pyfiglet==0.8.post1
+requests==2.26.0
